# train_bill_generator

./: .gitignore  CMakeLists.txt  Spreadsheet.xlsx  Train.cpp  fam.csv  main.cpp  names.csv  surnames.csv
OpenXLSX/: CMakeLists.txt  cmake_install.cmake
OpenXLSX/OpenXLSX/: OpenXLSXConfig.cmake  OpenXLSXTargets.cmake
